--- a/views/form.ejs
+++ b/views/form.ejs
@@ -7,11 +7,11 @@
     <h2>TOY FORM</h2>
 <form action="/add/toy" method="post">
     <input type="text" name="name" placeholder="Name.."><br><br>
-    <input type="text" name="toy" placeholder="Toy"><br><br>
+    <input type="text" name="toy_name" placeholder="Toy"><br><br>
     <input type="text" name="description" placeholder="Description.."><br><br>
     <input type="text" name="address" placeholder="Address.."><br><br>
     <input type="text" name="phone" placeholder="Mobile no.."><br><br>
-    <input type="file" name="image" placeholder="Toy image please.."><br><br><br>
+    <!-- <input type="file" name="image" placeholder="Toy image please.."><br><br><br> -->
     <input type="submit" name="">
 </body>
 </html>
